--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.2"
 authors = [{name = "Claude Zervas", email = "claude@utlco.com"}]
 description = "Simple 2D geometry package"
 readme = "README.rst"
-requires-python = ">=3.9"
+requires-python = ">=3.10"
 license = {file = "LICENSE"}
 classifiers = [
     "Programming Language :: Python :: 3",
@@ -27,6 +27,7 @@ dev = [
     "numpy",
     "sphinx",
     "sphinx-autobuild",
+    "sphinx_rtd_theme"
 ]
 
 [project.urls]
@@ -49,7 +50,11 @@ preview = true
 extension-pkg-allow-list = ["lxml.etree"]
 
 [tool.pylint."MESSAGES CONTROL"]
-ignore = "contrib"
+ignore-paths = [
+    ".*saved.*",
+    ".*unused.*",
+    ".*contrib.*"
+]
 disable = [
     "too-many-locals",
     "too-many-lines",
@@ -167,7 +172,7 @@ convention = "google"
 
 [tool.mypy]
 mypy_path = "./src"
-python_version = "3.9"
+python_version = "3.10"
 warn_return_any = true
 warn_unused_configs = true
 ignore_missing_imports = true
