--- a/.gitignore
+++ b/.gitignore
@@ -11,8 +11,8 @@ venv*
 __pycache__
 *.egg-info
 build/
-docsrc/_build
-docsrc/generated
+docs/_build
+docs/generated
 dist/
 .doctrees
 README.html
