--- a/.github/workflows/push_docs.yml
+++ b/.github/workflows/push_docs.yml
@@ -15,12 +15,19 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
     - uses: actions/setup-python@v5
       with:
         python-version: '3.10'
-    - uses: ammaraskar/sphinx-action@master
-      with:
-        docs-folder: "docs/"
+
+    - name: Build docs
+      run: |
+        pip install --upgrade pip
+        pip install .
+        pip install -r docs/requirements.txt
+        pip install sphinx
+        sphinx-build docs docs/_build/html
+
     - uses: actions/upload-pages-artifact@v3
       with:
         path: docs/_build/html/
