--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,7 @@ dependencies = ["typing_extensions"]
 test = ["pytest", "numpy"]
 dev = [
     "pytest",
-    "black",
     "ruff",
-    "pylint",
     "mypy",
     "numpy",
     "sphinx",
@@ -39,12 +37,6 @@ repository = "https://github.com/utlco/utl-geom2d"
 minversion="6.0"
 addopts = "-ra -q -s"
 testpaths = ["test",]
-
-[tool.black]
-line-length = 80
-target-version = ["py39"]
-skip-string-normalization = true
-preview = true
 
 [tool.pylint.MAIN]
 extension-pkg-allow-list = ["lxml.etree"]
@@ -77,7 +69,7 @@ method-rgx = "(?x)^(?:(?P<exempt>_[a-z0-9_]+__|(test|assert)_*[A-Z0-9][a-zA-Z0-9
 
 [tool.ruff]
 preview = true
-target-version = "py39"
+target-version = "py310"
 output-format = "concise"
 extend-exclude = [
     "venv",
@@ -146,24 +138,21 @@ select = [
     "YTT",
 ]
 extend-ignore = [
-    #"UP006",
-    #"UP007", # use X | Y type annot
-    "D107", # Missing docstring in `__init__`
-    "E203", # no ws before ':' (slice)
-    #"D407",
-    "Q000", # Double quotes preferred
-    "PLR2004", # Magic value used
+    "B905", # require zip strict=. In this case it's known true.
     "COM812", # trailing comma missing
+    "D107", # Missing docstring in `__init__`
+    #"E203", # no ws before ':' (slice)
+    "FURB189", # Use UserList. Not relevant here.
     "N806", # Upper case variable name
     "PLR0913", # Too many arguments to function call
     "PLR0917", # Too many positional arguments
     "PLR0904", # Too many public methods
+    "PLR0914", # Too many local variables
+    "PLR2004", # Magic value used
     "PLR6201", # Use a `set` literal when testing for membership
     "PLR6301", # Method could be function
-    "PLR0914", # Too many local variables
-    #"PTH123", # Use Path.open
+    "Q000", # Double quotes preferred
     "TRY003", # long msg outside exc cls
-    #"TRY400", # Use `logging.exception` instead of `logging.error`
 ]
 
 [tool.ruff.lint.pydocstyle]
